[tool.poetry]
name = "pg-backup-orchestrator"
version = "0.1.0"
description = "Automated postgres backup&restore tool"
authors = ["MajAhd <mjd.ahd.tbr@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
